--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-Flask
-Gunicorn
+flask
+flask-smorest
+python-dotenv
+sqlalchemy
+flask-sqlalchemy
+flask-jwt-extended
+passlib
+flask-migrate
+gunicorn
